# Document_Archiver_Korean-NLP_BERTClustering

./: README.md  pyproject.toml  requirements.txt
examples/: sample.txt  variable_mappings.json
src/docarchiver/: __init__.py  cli.py  config.py
src/docarchiver/extraction/: content_extractor.py
src/docarchiver/nlp/: semantic_analyzer.py
src/docarchiver/processors/: document_processor.py
src/docarchiver/storage/: secure_storage.py
src/docarchiver/system/: archiver.py
